# Aralap

./: .env  Dockerfile  bot.py  config.py  db.py  locales_ru.json  pyproject.toml  render.yaml  requirements.txt
